# snowbot-backup

./: config.txt.backup  installed_packages.txt  python_requirements.txt
snowbot_ws_backup/install/: local_setup.sh  setup.sh
snowbot_ws_backup/install/snowbot_current/lib/snowbot_current/: current_node
snowbot_ws_backup/log/: latest_build
snowbot_ws_backup/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
snowbot_ws_backup/src/log/: latest_build  latest_list
snowbot_ws_backup/src/rm3100_magnetometer/: package.xml  setup.cfg  setup.py
snowbot_ws_backup/src/rm3100_magnetometer/rm3100_magnetometer/: rm3100_node.py
snowbot_ws_backup/src/snowbot_autonomy/: package.xml  setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_autonomy/snowbot_autonomy/: autonomous_controller.py  obstacle_avoidance.py  teleop_keyboard.py
snowbot_ws_backup/src/snowbot_bringup/: package.xml  setup.py
snowbot_ws_backup/src/snowbot_bringup/launch/: snowbot.launch.py
snowbot_ws_backup/src/snowbot_chute/: package.xml  setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_chute/snowbot_chute/: chute_node.py
snowbot_ws_backup/src/snowbot_current/: setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_current/snowbot_current/: current_node.py
snowbot_ws_backup/src/snowbot_encoders/: package.xml  setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_encoders/snowbot_encoders/: encoder_node.py
snowbot_ws_backup/src/snowbot_gps/: package.xml  setup.py
snowbot_ws_backup/src/snowbot_gps/launch/: gps_launch.py  snowbot_gps.launch.py
snowbot_ws_backup/src/snowbot_gps/snowbot_gps/: ntrip_bridge.py
snowbot_ws_backup/src/snowbot_imu/: setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_imu/snowbot_imu/: imu_node.py
snowbot_ws_backup/src/snowbot_motors/: package.xml  setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_motors/snowbot_motors/: bench_encoder_test.py  drift_odom_test.py  heading_control_node.py  indoor_odom_test.py  motor_node.py  motor_node_openloop.py  odom_test.py  single_slow_test.py
snowbot_ws_backup/src/snowbot_servos/: setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_servos/snowbot_servos/: battery_monitor.py  servo_node.py  snowbot_waypoint_follower.py  waypoint_follower_v2.py  weather_monitor.py
snowbot_ws_backup/src/snowbot_ultrasonics/: package.xml  setup.cfg  setup.py
snowbot_ws_backup/src/snowbot_ultrasonics/snowbot_ultrasonics/: ultrasonic_node.py  ultrasonic_visualizer.py
(+38 files in other folders)
