<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snowbot_bringup</name>
  <version>0.0.1</version>
  <description>Snowbot bringup launch files</description>
  <maintainer email="pi@snowbot.local">pi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>snowbot_imu</exec_depend>
  <exec_depend>snowbot_ultrasonics</exec_depend>
  <exec_depend>snowbot_motors</exec_depend>
  <exec_depend>snowbot_servos</exec_depend>
  <exec_depend>snowbot_current</exec_depend>
  <exec_depend>snowbot_chute</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
