<?xml version="1.0"?>
<package format="3">
  <name>snowbot_gps</name>
  <version>0.0.0</version>
  <description>GPS and RTK for Snowbot</description>
  <maintainer email="pi@snowbot.local">pi</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>ntrip_client</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
